--- a/packages/shared/src/styles/constants.scss
+++ b/packages/shared/src/styles/constants.scss
@@ -15,83 +15,84 @@
 /* COLOR PALETTE */
 
 /* colors */
-$color-black: #0f0f11;
-$color-black-1: #241c97;
-$color-blackie: #e9eef0;
-$color-gray-6: #FFFFFF;
-$color-black-3: #FFFFFF;
-$color-black-4: #27292a;
-$color-black-5: #2e3233;
-$color-black-6: #525252;
-$color-black-7: #2b1db1;
-$color-black-8: #3a3f40;
-$color-black-9: #6a6a6a;
+$color-black: #2f2222;
+$color-black-1: #333333;
+$color-black-3: #151717;
+$color-black-4: #1d1f20;
+$color-black-5: #444747;
+$color-black-6: #242121;
+$color-black-7: #000000;
+$color-black-8: #323738;
+$color-black-9: #5c5c5c;
 $color-black-10: #181c25;
-$color-blue: #4484ff;
-$color-blue-1: #202942;
-$color-blue-2: #344982;
-$color-blue-3: #0aa1ee;
-$color-blue-4: #0981c0;
-$color-blue-5: #e2ecff;
-$color-blue-6: #a0c4ff;
-$color-blue-7: #1f2a3b; 
-$color-blue-8: #fff8ee;
-$color-blue-9: #0F172A;
-$color-brown: #7a5020;
-$color-green: #1d1644;
-$color-green-1: #213780;
-$color-green-2: #9b9987;
-$color-green-3: #254da5;
-$color-green-4: #b19a1b;
-$color-green-5: #56c5c429;
-$color-green-6: #a58e27;
-$color-green-7: #ebfefb;
-$color-green-8: #d5e4e5;
-$color-grey: #8c84a7;
-$color-grey-1: #FFFFFF;
-$color-grey-2: #112131;
-$color-grey-3: #e0e7e9;
-$color-grey-4: #209494;
-$color-grey-5: #14272c;
-$color-grey-6: #701a1a;
-$color-grey-7: #7a7a7a;
-$color-grey-8: #a85151;
-$color_grey-9: #909090;
-$color-grey-10: #9d9d9d;
-$color-grey-11: #fcfcfc;
-$color-grey-12: #19468a;
-$color-grey-13: #333333;
-$color-grey-14: #e5e8ea;
-$color-orange: #ff7855;
-$color-purple: #140f57;
-$color-red: #3433a0;
-$color-red-1: #4970f1;
-$color-red-2: #2b1880;
-$color-red-3: #101970;
-$color-red-4: #1a2188;
-$color-red-5: #484bf4;
-$color-red-6: #f1494929;
-$color-red-7: #ffe7e9;
-$color-red-8: #751f24;
-$color-red-9: #c03a41;
-$color-red-10: #110c57;
-$color-red-11: #fde8e8;
-$color-violet: #180c4b;
-$color-white: #943535;
-$color-yellow: #ffba47;
-$color-yellow-1: #c08212;
-$color-yellow-2: #ffb31a;
-$color-yellow-3: rgb(255 186 71 / 16%);
+$color-blue: #377cfc;
+$color-blue-1: #0dc2e7;
+$color-blue-2: #2a3052;
+$color-blue-3: #0796e0;
+$color-blue-4: #0677af;
+$color-blue-5: #dfeaff;
+$color-blue-6: #92b8ff;
+$color-blue-7: #182130;
+$color-blue-8: #e6f5ff;
+$color-blue-9: #00426a;
+$color-brown: #664407;
+$color-green: #278a42;
+$color-green-1: #2dc13e;
+$color-green-2: #1f9c1d;
+$color-green-3: #1a742b;
+$color-green-4: #16812a;
+$color-green-5: #7c939329;
+$color-green-6: #5a8d82;
+$color-green-7: #e8fdf8;
+$color-green-8: #cedddf;
+$color-grey: #7f7b7b;
+$color-grey-1: #ded7d7;
+$color-grey-2: #a9abae;
+$color-grey-3: #aaadaf;
+$color-grey-4: #e6e9e9;
+$color-grey-5: #041216;
+$color-grey-6: #d6d6d6;
+$color-grey-7: #6e6e6e;
+$color-grey-8: #d7d7d7;
+$color_grey-9: #868686;
+$color-grey-10: #919191;
+$color-grey-11: #fafafa;
+$color-grey-12: #6b89b6;
+$color-grey-13: #d6d0d0;
+$color-grey-14: #e2e5e7;
+$color-grey-15: #f3f4f5;
+$color-orange: #ff6444;
+$color-orange-2: #ff9c13;
+$color-purple: #722fe4;
+$color-red: #130753;
+$color-red-1: #1b0e5f;
+$color-red-2: #482ecc;
+$color-red-3: #a32430;
+$color-red-4: #3646d3;
+$color-red-5: #150861;
+$color-red-6: #ec3f3f29;
+$color-red-7: #ffe1e3;
+$color-red-8: #661b20;
+$color-red-9: #3062b3;
+$color-red-10: #445aff;
+$color-red-11: #fce3e3;
+$color-red-12: #001ac4;
+$color-violet: #4a3871;
+$color-white: #e7e4e4;
+$color-yellow: #ffad3a;
+$color-yellow-1: #b3760d;
+$color-yellow-2: #ffa912;
+$color-yellow-3: rgba(255, 173, 58, 0.16);
 $color-yellow-4: #fff7e6;
 $color-yellow-5: #6a4800;
 $color-yellow-6: #ffeabf;
 
 /* status colors */
 $color-status-warning: rgba(255, 173, 58, 0.16);
-$color-status-information: rgba(90, 96, 106, 0.16);
+$color-status-information: rgba(55, 124, 252, 0.16);
 $color-status-announcement: rgba(75, 180, 179, 0.16);
-$color-status-error: rgba(85, 20, 20, 0.16);
-$color-status-verified: rgb(46, 207, 92);
+$color-status-error: rgba(236, 63, 63, 0.16);
+$color-status-verified: rgba(0, 122, 34);
 $color-status-danger: rgba(196, 0, 0);
 
 /* alpha colors */
@@ -154,12 +155,12 @@ $gradient-color-green-4: linear-gradient(90deg, #1db193 0%, #09da7a 104.41%);
 $COLOR_BLACK: #000000;
 $COLOR_BLACK_2: #1d1f20;
 $COLOR_BLACK_3: #0e0e0e;
-$COLOR_GREEN_1: #125017;
+$COLOR_GREEN_1: #3f8d46;
 $COLOR_GREEN_2: #2d9f93;
 $COLOR_GREEN_3: #1da918;
 $COLOR_GREEN_4: #0e4f24;
 $COLOR_GREEN_5: #117422;
-$COLOR_ORANGE: #60401f;
+$COLOR_ORANGE: #ff9933;
 $COLOR_DARK_ORANGE: #ff8802;
 $COLOR_PURPLE: #4f60ae;
 $COLOR_RED: #401ce3;
@@ -253,6 +254,6 @@ $ready-banner-bg-color: #e2f3f3;
 $ready-banner-tick-bg-color: #4ab4b3;
 $wallet-demo-bg-color: #fff8f9;
 $wallet-dark-demo-bg-color: #140506;
-$wallet-demo-divider-color: #5d2e31;
+$wallet-demo-divider-color: #fff0f1;
 $wallet-box-shadow: 0px 12px 16px -4px rgba(14, 14, 14, 0.08), 0px 4px 6px -2px rgba(14, 14, 14, 0.03);
 $btn-shadow: 0px 24px 24px 0px rgba(0, 0, 0, 0.08), 0px 0px 24px 0px rgba(0, 0, 0, 0.08);
