--- a/packages/shared/src/styles/constants.scss
+++ b/packages/shared/src/styles/constants.scss
@@ -23,37 +23,37 @@ $color-black-5: #444747;
 $color-black-6: #242121;
 $color-black-7: #000000;
 $color-black-8: #323738;
-$color-black-9: #5c5c5c;
+$color-black-9: #c09f9f;
 $color-black-10: #181c25;
 $color-blue: #377cfc;
 $color-blue-1: #0dc2e7;
 $color-blue-2: #2a3052;
 $color-blue-3: #0796e0;
 $color-blue-4: #0677af;
-$color-blue-5: #dfeaff;
-$color-blue-6: #92b8ff;
+$color-blue-5: #314874;
+$color-blue-6: #052b71;
 $color-blue-7: #182130;
-$color-blue-8: #e6f5ff;
+$color-blue-8: #021929;
 $color-blue-9: #00426a;
 $color-brown: #664407;
 $color-green: #278a42;
 $color-green-1: #2dc13e;
-$color-green-2: #1f9c1d;
+$color-green-2: #0e3c0d;
 $color-green-3: #1a742b;
 $color-green-4: #16812a;
 $color-green-5: #7c939329;
-$color-green-6: #5a8d82;
-$color-green-7: #e8fdf8;
-$color-green-8: #cedddf;
-$color-grey: #7f7b7b;
-$color-grey-1: #ded7d7;
-$color-grey-2: #a9abae;
-$color-grey-3: #aaadaf;
-$color-grey-4: #e6e9e9;
-$color-grey-5: #041216;
-$color-grey-6: #d6d6d6;
+$color-green-6: #3e6c41;
+$color-green-7: #516d67;
+$color-green-8: #305257;
+$color-grey: #4e4343;
+$color-grey-1: #666262;
+$color-grey-2: #6f7a8b;
+$color-grey-3: #162e3f;
+$color-grey-4: #707c7c;
+$color-grey-5: #132328;
+$color-grey-6: #a28181;
 $color-grey-7: #6e6e6e;
-$color-grey-8: #d7d7d7;
+$color-grey-8: #837575;
 $color_grey-9: #868686;
 $color-grey-10: #919191;
 $color-grey-11: #fafafa;
@@ -63,9 +63,9 @@ $color-grey-14: #e2e5e7;
 $color-grey-15: #f3f4f5;
 $color-orange: #ff6444;
 $color-orange-2: #ff9c13;
-$color-purple: #722fe4;
-$color-red: #130753;
-$color-red-1: #1b0e5f;
+$color-purple: #73251d;
+$color-red: #2c18a1;
+$color-red-1: #4f428f;
 $color-red-2: #482ecc;
 $color-red-3: #a32430;
 $color-red-4: #3646d3;
@@ -79,16 +79,16 @@ $color-red-11: #fce3e3;
 $color-red-12: #001ac4;
 $color-violet: #4a3871;
 $color-white: #e7e4e4;
-$color-yellow: #ffad3a;
+$color-yellow: #c39a60;
 $color-yellow-1: #b3760d;
-$color-yellow-2: #ffa912;
+$color-yellow-2: #836d46;
 $color-yellow-3: rgba(255, 173, 58, 0.16);
 $color-yellow-4: #fff7e6;
 $color-yellow-5: #6a4800;
 $color-yellow-6: #ffeabf;
 
 /* status colors */
-$color-status-warning: rgba(255, 173, 58, 0.16);
+$color-status-warning: rgba(119, 107, 90, 0.16);
 $color-status-information: rgba(55, 124, 252, 0.16);
 $color-status-announcement: rgba(75, 180, 179, 0.16);
 $color-status-error: rgba(236, 63, 63, 0.16);
@@ -155,21 +155,21 @@ $gradient-color-green-4: linear-gradient(90deg, #1db193 0%, #09da7a 104.41%);
 $COLOR_BLACK: #000000;
 $COLOR_BLACK_2: #1d1f20;
 $COLOR_BLACK_3: #0e0e0e;
-$COLOR_GREEN_1: #3f8d46;
+$COLOR_GREEN_1: #2e6432;
 $COLOR_GREEN_2: #2d9f93;
-$COLOR_GREEN_3: #1da918;
+$COLOR_GREEN_3: #254723;
 $COLOR_GREEN_4: #0e4f24;
 $COLOR_GREEN_5: #117422;
-$COLOR_ORANGE: #ff9933;
+$COLOR_ORANGE: #754a20;
 $COLOR_DARK_ORANGE: #ff8802;
-$COLOR_PURPLE: #4f60ae;
+$COLOR_PURPLE: #1b2553;
 $COLOR_RED: #401ce3;
-$COLOR_RED_2: #482ecc;
+$COLOR_RED_2: #251671;
 $COLOR_RED_3: #3fec59;
-$COLOR_CORAL_RED: #ff444f;
+$COLOR_CORAL_RED: #500f13;
 $COLOR_SKY_BLUE: #2196f3;
-$COLOR_WHITE: #ffffff;
-$COLOR_BLUE: #1c5ae3;
+$COLOR_WHITE: #b7b7b7;
+$COLOR_BLUE: #102b65;
 
 // Light theme
 $COLOR_LIGHT_BLACK_1: rgba(0, 0, 0, 0.8);
@@ -179,11 +179,11 @@ $COLOR_LIGHT_BLACK_3_SOLID_1: #c3b5b5;
 $COLOR_LIGHT_BLACK_3_SOLID_2: #4e3b3b;
 $COLOR_LIGHT_BLACK_4: rgba(0, 0, 0, 0.04);
 $COLOR_LIGHT_BLACK_4_SOLID: #2a2aef;
-$COLOR_LIGHT_GRAY_1: #8a96de;
+$COLOR_LIGHT_GRAY_1: #111b58;
 $COLOR_LIGHT_GRAY_2: rgba(153, 156, 172, 0.32);
 $COLOR_LIGHT_GRAY_3: #3b454a;
-$COLOR_LIGHT_GRAY_4: #6e6e6e;
-$COLOR_LIGHT_GRAY_5: #486b76;
+$COLOR_LIGHT_GRAY_4: #4f2e2e;
+$COLOR_LIGHT_GRAY_5: #71cae5;
 $COLOR_LIGHT_GRAY_6: #28333f;
 $COLOR_LIGHT_GREEN_GRADIENT: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(0, 148, 117, 0.16));
 $COLOR_LIGHT_RED_GRADIENT: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(227, 28, 75, 0.16));
@@ -194,16 +194,16 @@ $COLOR_DARK_BLUE_1: #0b0e18;
 $COLOR_DARK_BLUE_2: #101320;
 $COLOR_DARK_BLUE_3: #191c31;
 $COLOR_DARK_BLUE_4: #202641;
-$COLOR_DARK_BLUE_5: #2a3052;
+$COLOR_DARK_BLUE_5: #4259d7;
 $COLOR_DARK_BLUE_6: #555975;
 $COLOR_DARK_BLUE_7: #393c4e;
 $COLOR_DARK_BLUE_8: rgba(127, 131, 151, 0.3);
 $COLOR_DARK_GREEN_GRADIENT: linear-gradient(to top, rgba(16, 19, 32, 0), rgba(0, 148, 117, 0.16));
 $COLOR_DARK_RED_GRADIENT: linear-gradient(to top, rgba(16, 19, 32, 0), rgba(227, 28, 75, 0.16));
-$COLOR_DARK_GRAY_1: #282a37;
+$COLOR_DARK_GRAY_1: #a2a9d3;
 $COLOR_DARK_GRAY_2: #303342;
-$COLOR_DARK_GRAY_3: #555975;
-$COLOR_DARK_GRAY_4: #333030;
+$COLOR_DARK_GRAY_3: #181e4a;
+$COLOR_DARK_GRAY_4: #c69d9d;
 /* stylelint-enable color-no-hex */
 
 $BORDER_RADIUS: 4px;
