--- a/packages/shared/src/styles/constants.scss
+++ b/packages/shared/src/styles/constants.scss
@@ -35,6 +35,7 @@ $color-blue-6: #052b71;
 $color-blue-7: #182130;
 $color-blue-8: #021929;
 $color-blue-9: #00426a;
+$color-wite: #0b0a3b;
 $color-brown: #664407;
 $color-green: #278a42;
 $color-green-1: #2dc13e;
