--- a/packages/shared/src/styles/themes.scss
+++ b/packages/shared/src/styles/themes.scss
@@ -73,6 +73,7 @@
         --general-main-3: #{$color-grey-1};
         --general-main-4: #{$alpha-color-white-4};
         --general-main-5: #{$color-white};
+        --general-main-16: #{$color-wite};
         --general-section-1: #{$color-grey-2};
         --general-section-2: #{$color-grey-2};
         --general-section-3: #{$color-grey-11};
@@ -237,6 +238,7 @@
         --general-main-3: #{$color-black-4};
         --general-main-4: #{$alpha-color-black-7};
         --general-main-5: #{$color-black-10};
+        --general-main-16: #{$color-wite};
         --general-section-1: #{$color-black-3};
         --general-section-2: #{$color-black};
         --general-section-3: #{$color-black-5};
