--- a/packages/bot-web-ui/src/pages/main/main.scss
+++ b/packages/bot-web-ui/src/pages/main/main.scss
@@ -50,7 +50,7 @@
             }
 
             &__list {
-                background: var(--general-section-16);
+                background: var(--general-main-16);
                 justify-content: start;
 
                 @include mobile-or-tablet-screen {
