--- a/packages/shared/src/styles/constants.scss
+++ b/packages/shared/src/styles/constants.scss
@@ -64,7 +64,7 @@ $color-grey-14: #e2e5e7;
 $color-grey-15: #f3f4f5;
 $color-orange: #ff6444;
 $color-orange-2: #ff9c13;
-$color-purple: #73251d;
+$color-purple: #bdaead;
 $color-red: #2c18a1;
 $color-red-1: #4f428f;
 $color-red-2: #482ecc;
@@ -167,7 +167,7 @@ $COLOR_PURPLE: #1b2553;
 $COLOR_RED: #401ce3;
 $COLOR_RED_2: #251671;
 $COLOR_RED_3: #3fec59;
-$COLOR_CORAL_RED: #500f13;
+$COLOR_CORAL_RED: #979797;
 $COLOR_SKY_BLUE: #2196f3;
 $COLOR_WHITE: #b7b7b7;
 $COLOR_BLUE: #102b65;
@@ -183,7 +183,7 @@ $COLOR_LIGHT_BLACK_4_SOLID: #2a2aef;
 $COLOR_LIGHT_GRAY_1: #111b58;
 $COLOR_LIGHT_GRAY_2: rgba(153, 156, 172, 0.32);
 $COLOR_LIGHT_GRAY_3: #3b454a;
-$COLOR_LIGHT_GRAY_4: #4f2e2e;
+$COLOR_LIGHT_GRAY_4: #97969b;
 $COLOR_LIGHT_GRAY_5: #71cae5;
 $COLOR_LIGHT_GRAY_6: #28333f;
 $COLOR_LIGHT_GREEN_GRADIENT: linear-gradient(to top, rgba(255, 255, 255, 0), rgba(0, 148, 117, 0.16));
