--- a/packages/bot-web-ui/src/pages/trader/trader.module.scss
+++ b/packages/bot-web-ui/src/pages/trader/trader.module.scss
@@ -39,7 +39,7 @@
 
 .redirectButton {
   background-color: #4CAF50;
-  color: white;
+  color: #ffffff;
   border: none;
   padding: 12px 24px;
   text-align: center;
